--- a/.github/workflows/weibo.yml
+++ b/.github/workflows/weibo.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-        WB_TOKEN: ${{ secrets.WB_TOKEN }}
-        WB_COOKIE: ${{ secrets.WB_COOKIE }}
+      
+        kwwCk: ${{ secrets.kwwCk }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -22,13 +22,13 @@ jobs:
         with:
           node-version: 12.x
       - name: npm install
-        if: env.WB_TOKEN
+        if: env.kwwCk
         run: |
           npm install
       - name: '运行 【新浪微博】'
-        if: env.WB_TOKEN
+        if: env.kwwCk
         run: |
-          node Task/weibo.js
+          node Task/kww.js
         env:
           PUSH_KEY: ${{ secrets.PUSH_KEY}}
           BARK_PUSH: ${{ secrets.BARK_PUSH}}
