--- a/.github/workflows/weibo.yml
+++ b/.github/workflows/weibo.yml
@@ -13,7 +13,7 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
     env:
       
-        kwwCk: ${{ secrets.kwwCk }}
+        kwwCk: ${{ secrets.KWWCK }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
